objects/FieloCH__ChallengeMember__c.object
<CustomObject>
    <fields>
        <fullName>FieloCH__AlternativeKey__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>AlternativeKey</label>
        <length>40</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>FieloCH__Challenge2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Challenge</label>
        <referenceTo>FieloCH__Challenge__c</referenceTo>
        <relationshipLabel>Members</relationshipLabel>
        <relationshipName>ChallengeMembers2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FieloCH__ChallengeReward__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>ChallengeReward</label>
        <referenceTo>FieloCH__ChallengeReward__c</referenceTo>
        <relationshipName>ChallengeRewards</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FieloCH__Counter__c</fullName>
        <label>Counter</label>
        <precision>16</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FieloCH__MemberEmail__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Member Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>FieloCH__Member__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Member</label>
        <referenceTo>FieloEE__Member__c</referenceTo>
        <relationshipLabel>Challenge Members</relationshipLabel>
        <relationshipName>ChallengesMembers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FieloCH__MissionAccomplished__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Count the amount of mission that the member has accomplished</description>
        <label>Mission Accomplished</label>
        <precision>15</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FieloCH__Position__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Position</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FieloCH__RewardDescription__c</fullName>
        <formula>FieloCH__ChallengeReward__r.FieloCH__Description__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Reward Description</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FieloCH__Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Accomplished</fullName>
                </value>
                <value>
                    <fullName>Not Accomplished</fullName>
                </value>
                <value>
                    <fullName>Unsubscribe</fullName>
                </value>
                <value>
                    <fullName>Accomplished Pending</fullName>
                </value>
                <value>
                    <fullName>Pending</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FieloCH__Team__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Team</label>
        <referenceTo>FieloCH__Team__c</referenceTo>
        <relationshipLabel>Challenge Members</relationshipLabel>
        <relationshipName>ChallengeMembers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FieloCH__Value__c</fullName>
        <label>Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <label>Challenge Member</label>
    <listViews>
        <fullName>FieloCH__All</fullName>
        <columns>NAME</columns>
        <columns>FieloCH__ChallengeReward__c</columns>
        <columns>FieloCH__Counter__c</columns>
        <columns>FieloCH__Member__c</columns>
        <columns>FieloCH__Status__c</columns>
        <columns>FieloCH__Value__c</columns>
        <columns>FieloCH__Team__c</columns>
        <columns>FieloCH__Position__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>CHM-{000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Members</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>FieloCH__FillMemberOrTeam</fullName>
        <active>false</active>
        <errorConditionFormula>AND( ISBLANK(FieloCH__Member__c), ISBLANK(FieloCH__Team__c) )</errorConditionFormula>
        <errorMessage>You must choose either a Member or a Team</errorMessage>
    </validationRules>
</CustomObject>